fix gambar error

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
               <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal2">
 
-                <img src="assets/images/project2.PNG" alt="">
+                <img src="assets/images/pospos.png" alt="">
 
                   <div class="itemHover">
                     <h6>Digital Sales Pos</h6>
@@ -541,7 +541,7 @@
               </a>
 
               <div id="image-modal2" class="mfp-hide modal-box">
-                  <img src="assets/images/project2.PNG" alt="">
+                  <img src="assets/images/pospos.png" alt="">
                   <div class="modal-box-content">
                     <h2>Digital Sales Pos</h2>
                     <p>This application is designed for data processing of competitor logistics services. Like J&T, Tiki, etc. This application in general is a big data for the orange team logistics services PT. POS Indonesia, to determine which area should be the target of marketing. </p>
