--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <div class="col-md-6 resumeEmp">
 
                     <ul class="resumeList">
-                        <li class="resTitle"><h4>Experience</h4></li>
+                        <li class="resTitle"><h4>Working Experience</h4></li>
                         <li>
                             <div class="resumeIcon">
                                 <div class="icon icon-basic-case"></div>
@@ -328,10 +328,21 @@
                                 <div class="icon icon-basic-case"></div>
                             </div>
                             <div class="resumeContent">
-                                <h5>Programmer ( Freelance )</h5>
+                                <h5>Web & Android Developer (Part-time)</h5>
                                 <span><span style="font-size: .5em;">Sept</span> 2020 - <span style="font-size: .5em;">Jan</span> 2021</span>
                                 <p class="plineheight">
                                 PT. Senopati Indra Technology</p>
+                            </div>
+                        </li>
+                         <li>
+                            <div class="resumeIcon">
+                                <div class="icon icon-basic-case"></div>
+                            </div>
+                            <div class="resumeContent">
+                                <h5>Game & Web Developer</h5>
+                                <span><span style="font-size: .5em;">Feb</span> 2021 - <span style="font-size: .5em;">Now
+                                <p class="plineheight">
+                                PT. Setiacorp</p>
                             </div>
                         </li>
                     </ul>
@@ -373,8 +384,8 @@
                 <img src="assets/images/android.jpeg" alt="" height="400">
 
                   <div class="itemHover">
-                    <h6>SIWADES</h6>
-                    <h4>Website</h4>
+                    <h6>Community Project</h6>
+                    <h4>Android App</h4>
                   </div>
 
               </a>
