--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="col-md-4 col-sm-5 col-xs-12">
             <div class="storyText">
             <h4>Skills</h4>
-            <h6>Web development (PHP,CSS,Javascript,HTML,Framework)</h6>
+            <h6>Web development</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
             95
@@ -166,42 +166,42 @@
             </div>
 
 
-            <h6>Game development (Unity)</h6>
+            <h6>Game development</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
             90%
             </div>
             </div>
 
-            <h6>Android Development (Kotlin)</h6>
+            <h6>Android Development</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
             70%
             </div>
             </div>
 
-             <h6>Desktop Development (Java)</h6>
+             <h6>Desktop Development</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
             80%
             </div>
             </div>
 
-             <h6>2D Design (Adobe Ilustrator, CorelDraw)</h6>
+             <h6>2D Design</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
             80%
             </div>
             </div>
 
-            <h6>3D Modeling (Blender)</h6>
+            <h6>3D Modeling</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
             50%
             </div>
             </div>
 
-             <h6>Video Editing (Premiere Pro, Vegas pro, Filmora)</h6>
+             <h6>Video Editing</h6>
             <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
             85%
