--- a/index.html
+++ b/index.html
@@ -168,21 +168,21 @@
 
             <h6>Game development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
             90%
             </div>
             </div>
 
             <h6>Android Development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
             70%
             </div>
             </div>
 
              <h6>Desktop Development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
             80%
             </div>
             </div>
@@ -376,6 +376,29 @@
 
         <div class="gutter-sizer"></div>
 
+
+            <div class="grid-item item-five item-padding">
+
+              <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal21">
+
+                <img src="assets/images/scm.png" alt="" height="400">
+
+                  <div class="itemHover">
+                    <h6>Sekolah Cendekia Mandiri (Online School)</h6>
+                    <h4>PT.Setiacorp</h4>
+                  </div>
+
+              </a>
+
+              <div id="image-modal21" class="mfp-hide modal-box">
+                  <img src="assets/images/scm.png" alt="">
+                  <div class="modal-box-content">
+                    <h2>PT.Setiacorp</h2>
+                    <p>This website apps made by team of setiacorp, Online school for elementary grade. for helping people in the middle of pandemic. This is the first legal online apps in indonesia</p><p><a href="https://www.app.sekolahcendekiamandiri.com/">here is the project</p>
+                  </div>
+              </div>         
+
+            </div>
 
             <div class="grid-item item-five item-padding">
 
@@ -716,8 +739,8 @@
 
         <section id="sectionServices">
           <div class="sectionTitle">
-            <h1>Services</h1>
-            <h6>What can I do for you</h6>
+            <h1>Organization Experience</h1>
+            <h6>Latest Experience</h6>
           </div>       
 
           
@@ -727,13 +750,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="servicesBox">
                         <div class="servicesIcon">
-                            <div class="icon icon-basic-lightbulb"></div>
+                            <div class="icon icon-basic-link"></div>
                         </div>
                         <div class="servicesContent">
-                        <h4>Ideas</h4>
-                        <h6>Help you start</h6>
-                        <p class="plineheight">
-                        I will help you with the main ideas that will help your business. What application products do you need, let's talk about it.</p>
+                        <h4>Himpunan Mahasiswa Jurusan (Himatif UIN Bandung)</h4>
+                        <h6>Anggota Bidang Adfokom 2019 - 2020</h6>
                         </div>
                     </div>
                 </div>
@@ -741,13 +762,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="servicesBox">
                         <div class="servicesIcon">
-                            <div class="icon icon-basic-notebook-pencil"></div>
+                            <div class="icon icon_mic"></div>
                         </div>
                         <div class="servicesContent">
-                        <h4>Sketches</h4>
-                        <h6>See different looks</h6>
-                        <p class="plineheight">
-                        Initial sketch of the main idea. this will simplify and clarify the work of the product.</p>
+                        <h4>Paduan Suara Mahasiswa Saintek</h4>
+                        <h6>Anggota Bass 2019 - 2020</h6>
                         </div>
                     </div>
                 </div>
@@ -759,13 +778,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="servicesBox">
                         <div class="servicesIcon">
-                            <div class="icon icon-basic-webpage-img-txt"></div>
+                            <div class="icon icon-basic-link"></div>
                         </div>
                         <div class="servicesContent">
-                        <h4>Graphics</h4>
-                        <h6>Get a design</h6>
-                        <p class="plineheight">
-                        Design from Initial Sketch, yaaayyyy !!!!!.</p>
+                        <h4>Karang Taruna Bukit Mekar Indah</h4>
+                        <h6>Ketua Periode 2016 - 2017</h6>
                         </div>
                     </div>
                 </div>
@@ -773,13 +790,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="servicesBox">
                         <div class="servicesIcon">
-                            <div class="icon icon-basic-keyboard"></div>
+                            <div class="icon icon-basic-link"></div>
                         </div>
                         <div class="servicesContent">
-                        <h4>Develop</h4>
-                        <h6>Build your project</h6>
-                        <p class="plineheight">
-                        And the last step is to develop your product. Execution will be as fast as lightning</p>
+                        <h4>Family Basketball UIN Bandung</h4>
+                        <h6>Anggota 2017 - 2018</h6>
                         </div>
                     </div>
                 </div>
