--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
               <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal21">
 
-                <img src="assets/images/scm.png" alt="" height="400">
+                <img src="assets/images/SCM.png" alt="" height="400">
 
                   <div class="itemHover">
                     <h6>Sekolah Cendekia Mandiri (Online School)</h6>
@@ -391,7 +391,7 @@
               </a>
 
               <div id="image-modal21" class="mfp-hide modal-box">
-                  <img src="assets/images/scm.png" alt="">
+                  <img src="assets/images/SCM.png" alt="">
                   <div class="modal-box-content">
                     <h2>PT.Setiacorp</h2>
                     <p>This website apps made by team of setiacorp, Online school for elementary grade. for helping people in the middle of pandemic. This is the first legal online apps in indonesia</p><p><a href="https://www.app.sekolahcendekiamandiri.com/">here is the project</p>
