--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </div>
                             <div class="resumeContent">
                                 <h5>UIN Sunang Gunung Djati Bandung</h5>
-                                <span>2017- (now) </span>
+                                <span>2017- 2022 </span>
                                 <p class="plineheight">
                                 Computer Engineer (Bachelor)</p>
                             </div>
@@ -340,7 +340,7 @@
                             </div>
                             <div class="resumeContent">
                                 <h5>Game & Web Developer</h5>
-                                <span><span style="font-size: .5em;">Feb</span> 2021 - <span style="font-size: .5em;">Now
+                                <span><span style="font-size: .5em;">Feb</span> 2021 - <span style="font-size: .5em;">January 2022
                                 <p class="plineheight">
                                 PT. Setiacorp</p>
                             </div>
