--- a/index.html
+++ b/index.html
@@ -377,6 +377,53 @@
         <div class="gutter-sizer"></div>
 
 
+        <div class="grid-item item-five item-padding">
+
+          <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal23">
+
+            <img src="assets/images/beruang.png" alt="" height="400">
+
+              <div class="itemHover">
+                <h6>Sekolah Cendekia Mandiri (Chased By Bear)</h6>
+                <h4>PT.Setiacorp</h4>
+              </div>
+
+          </a>
+
+          <div id="image-modal23" class="mfp-hide modal-box">
+              <img src="assets/images/beruang.png" alt="">
+              <div class="modal-box-content">
+                <h2>PT.Setiacorp</h2>
+                <p>This game is part of product Sekolah Cendekia Mandiri E-Learning School, i'm make this game as part of the team for education purpose</p><p><a href="https://www.app.sekolahcendekiamandiri.com/">here is the project</p>
+              </div>
+          </div>         
+
+        </div>
+
+        <div class="grid-item item-five item-padding">
+
+          <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal22">
+
+            <img src="assets/images/maze.png" alt="" height="400">
+
+              <div class="itemHover">
+                <h6>Sekolah Cendekia Mandiri (Maze Runner)</h6>
+                <h4>PT.Setiacorp</h4>
+              </div>
+
+          </a>
+
+          <div id="image-modal22" class="mfp-hide modal-box">
+              <img src="assets/images/maze.png" alt="">
+              <div class="modal-box-content">
+                <h2>PT.Setiacorp</h2>
+                <p>This game is part of product Sekolah Cendekia Mandiri E-Learning School, i'm make this game as part of the team for education purpose</p><p><a href="https://www.app.sekolahcendekiamandiri.com/">here is the project</p>
+              </div>
+          </div>         
+
+        </div>
+
+
             <div class="grid-item item-five item-padding">
 
               <a class="image-modal" style="box-shadow: 0px 0px 8px #b7fffe;" href="#image-modal21">
