--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
 
             <h6>Android Development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-            70%
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            80%
             </div>
             </div>
 
              <h6>Desktop Development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
             80%
             </div>
             </div>
@@ -345,6 +345,17 @@
                                 PT. Setiacorp</p>
                             </div>
                         </li>
+                        <li>
+                          <div class="resumeIcon">
+                              <div class="icon icon-basic-case"></div>
+                          </div>
+                          <div class="resumeContent">
+                              <h5>Fullstack Developer</h5>
+                              <span><span style="font-size: .5em;">Feb</span> 2022 - <span style="font-size: .5em;">Now
+                              <p class="plineheight">
+                              PT. BTS.ID</p>
+                          </div>
+                      </li>
                     </ul>
 
                 </div>
@@ -790,6 +801,52 @@
                   <div class="modal-box-content">
                     <h2>Invitation Wedding Generator</h2>
                     <p>This project for wedding generator client, make invitation by system just input the data and system will generate</p>
+                  </div>
+              </div>         
+
+            </div>
+
+            <div class="grid-item item-five item-padding">
+
+              <a class="image-modal" href="#image-modalbio" style="box-shadow: 0px 0px 8px #b7fffe;">
+
+                <img src="assets/images/biofarma.png" alt="">
+
+                  <div class="itemHover">
+                    <h6>Self Assessment</h6>
+                    <h4>Pt.Biofarma</h4>
+                  </div>
+
+              </a>
+
+              <div id="image-modalbio" class="mfp-hide modal-box">
+                  <img src="assets/images/biofarma.png" alt="">
+                  <div class="modal-box-content">
+                    <h2>Pt.Biofarma</h2>
+                    <p>This project is intern on biofarma project, for scoring and document fullfillment where system can automated scoring the company based on given parameter</p>
+                  </div>
+              </div>         
+
+            </div>
+
+            <div class="grid-item item-five item-padding">
+
+              <a class="image-modal" href="#image-modalkj" style="box-shadow: 0px 0px 8px #b7fffe;">
+
+                <img src="assets/images/kelasjodoh.png" alt="">
+
+                  <div class="itemHover">
+                    <h6>Kelas Jodoh</h6>
+                    <h4>Pt.Setiacorp</h4>
+                  </div>
+
+              </a>
+
+              <div id="image-modalkj" class="mfp-hide modal-box">
+                  <img src="assets/images/kelasjodoh.png" alt="">
+                  <div class="modal-box-content">
+                    <h2>Kelas Jodoh</h2>
+                    <p>Kelas jodoh is taaruf based dating app, where you can learn many new skill and get your lifetime partner on the android app</p>
                   </div>
               </div>         
 
