--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 <h5>UIN Sunang Gunung Djati Bandung</h5>
                                 <span>2017- 2022 </span>
                                 <p class="plineheight">
-                                Computer Engineer (Bachelor)</p>
+                                Computer Engineer (Bachelor Degree)</p>
                             </div>
                         </li>
                         <li>
@@ -300,7 +300,7 @@
                 <div class="col-md-6 resumeEmp">
 
                     <ul class="resumeList">
-                        <li class="resTitle"><h4>Working Experience</h4></li>
+                        <li class="resTitle"><h4>Working Experience (2 Years ++)</h4></li>
                         <li>
                             <div class="resumeIcon">
                                 <div class="icon icon-basic-case"></div>
