--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <h1>Riki Ahmad Maulana</h1>
               <h4>Web Programmer | Game Developer | Desktop App Developer</h4>
               <p>
-              Hi my name is Riki Ahmad Maulana, i'm Web Programmer with 2 years experienced. But i was trying for something new. I was trying
+              Hi my name is Riki Ahmad Maulana, i'm Web Programmer with 3 years experienced. But i was trying for something new. I was trying
 			  to develop my own game, it took 1 years already, using Unity 3D for game engine and Blender for 3D character and animation. And also right now, i was trying with something new, learn about Android dev. So here's my portfolio.
               </p>
               </div>
@@ -182,8 +182,8 @@
 
              <h6>Desktop Development</h6>
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-            80%
+            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+            85%
             </div>
             </div>
 
@@ -300,7 +300,7 @@
                 <div class="col-md-6 resumeEmp">
 
                     <ul class="resumeList">
-                        <li class="resTitle"><h4>Working Experience (2 Years ++)</h4></li>
+                        <li class="resTitle"><h4>Working Experience</h4></li>
                         <li>
                             <div class="resumeIcon">
                                 <div class="icon icon-basic-case"></div>
@@ -340,8 +340,7 @@
                             </div>
                             <div class="resumeContent">
                                 <h5>Game & Web Developer</h5>
-                                <span><span style="font-size: .5em;">Feb</span> 2021 - <span style="font-size: .5em;">January 2022
-                                <p class="plineheight">
+                                <span><span style="font-size: .5em;">Feb</span> 2021 - <span style="font-size: .5em;">January</span> 2022<p class="plineheight">
                                 PT. Setiacorp</p>
                             </div>
                         </li>
@@ -351,11 +350,20 @@
                           </div>
                           <div class="resumeContent">
                               <h5>Fullstack Developer</h5>
-                              <span><span style="font-size: .5em;">Feb</span> 2022 - <span style="font-size: .5em;">Now
-                              <p class="plineheight">
+                              <span><span style="font-size: .5em;">Feb</span> 2022 - <span style="font-size: .5em;">February</span> 2023<p class="plineheight">
                               PT. BTS.ID</p>
                           </div>
-                      </li>
+                        </li>
+                        <li>
+                          <div class="resumeIcon">
+                              <div class="icon icon-basic-case"></div>
+                          </div>
+                          <div class="resumeContent">
+                              <h5>Fullstack Developer</h5>
+                              <span><span style="font-size: .5em;">Feb</span> 2023 - <span style="font-size: .5em;">PRESENT</span><p class="plineheight">
+                              Djava SDN BHD</p>
+                          </div>
+                        </li>
                     </ul>
 
                 </div>
